--- a/src/app/admin/pages/components/update-event/update-event.component.html
+++ b/src/app/admin/pages/components/update-event/update-event.component.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Spirax|Ubuntu" rel="stylesheet">
 <div class="heading">
   <div class="row">
     <div class="col-lg-2">
@@ -11,10 +12,10 @@
 </div>
 
 <div class="row">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-inverse">
     <ul class="nav nav-tabs">
       <li role="presentation">
-        <a routerLink="/admin/view-event">View</a>
+        <a routerLink="/admin/view-event/{{eventKey}}">View</a>
       </li>
       <li role="presentation" class="active">
         <a routerLink="/admin/update-event">Update</a>
