--- a/src/app/admin/pages/event-creation/event-creation.component.css
+++ b/src/app/admin/pages/event-creation/event-creation.component.css
@@ -1,230 +1,106 @@
-.navbar-brand{
-    font-size:30px;
+ .navbar-brand {
+    font-size: 30px;
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
     font-family: 'Ubuntu', sans-serif;
-  }
-  
-  .heading{
-    background-color:rgb(13, 32, 41);
-    height: 75px;
-  }
-  
-  .col-lg-8 {
+}
+
+.heading {
+    background-color: rgb(13, 32, 41);
+}
+
+.col-lg-8 {
     text-align: center;
-    width:100%;
-  }
-  h1{
-    text-align: center;
-    margin-left:150px;
-   }
-  
-  h2 {
-    color: #23527c;
-    text-align: center;
+}
+
+h2 {
+  color: #23527c;
+  text-align: center;
+  font-family: 'IM Fell English SC', serif;
+}
+
+b {
     font-family: 'IM Fell English SC', serif;
-  }
-  
-  .row.head{
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 20px;
-    margin-left:50px;
-    margin-top: 20px;
-  }
-  
-  b {
-    font-family: 'IM Fell English SC', serif;
-  }
-  
-  .card{  
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border:2px solid black;
-    border-radius: 10px;
-    margin-left:60px;
-    margin-top:50px;
-  }
-  
-  .card:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    cursor: pointer;
-  }
-  
-  .card-body {
-    width: 220px;
-  }
-  
-  .card-text {
-    font-family: 'Roboto Mono', monospace;
-    color: #7F2751;
-  }
-  
-  .card-title {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-    text-align: center;
-    color: rgb(69, 95, 226);
-  }
-  
-  .dropbtn {
-    color: #23527c;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    font-family: 'Ubuntu', sans-serif;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  } 
-  
-  .fa-ellipsis-v
-  {
-    padding: 10px; 
-    margin-right: 10px;
-    margin-top: 15px;
-    font-size:20px;
-    cursor: pointer;
-  }
-  .fa-chart-line
-  {
-    padding: 10px;
-    margin-top: 20px;
-    font-size:20px;
-  }
-  .fa-plus-circle{
-    padding: 10px;
-    margin-top: 20px;
-    font-size:20px;
-  } 
-  
-  .navbar-brand {
-    font-size:30px;
-    margin-top: 10px;
-  }
-    
-  .heading{
-    background-color:rgb(220, 235, 241);
-  }
-  
-  h1 {
-    text-align: center;    
-  }
-  
-  nav{
-    background-color:skyblue;
-    padding:10px;
-  }
-   
-  .btn.btn-primary{
-    margin-top:7px;
+}
+
+.btn.btn-primary {
+    margin-top: 7px;
     margin-right: 15px;
     margin-left: 10px;
-    
-  }
-    
-  i{
-    font-size:25px;
+}
+
+i {
+    font-size: 25px;
     padding-right: 15px;
-  }
-  
-  input{  
-    width:250px;
-  }
-    
-  .container{
-    margin-left:500px;
-    margin-top:300px;
-    border:2px;
-    width:30%;
-    height:40%;
-    height: 80%;margin:auto;
-    padding:20px;
+}
+
+input {
+    width: 250px;
+}
+
+.container {
+    margin-left: 500px;
+    margin-top: 300px;
+    border: 2px;
+    width: 30%;
+    height: 40%;
+    height: 80%;
+    margin: auto;
+    padding: 20px;
     box-shadow: 0px 0px 8px grey;
-    background-color: white;
-  }
-  
-  .container{
-    margin-left:500px;
-    border:2px;
-    box-shadow: 2px;
-  }
-  
-  #location{
-    width:250px;
+    background-color: #44B6B8;
+}
+
+#location {
+    width: 250px;
     position: relative;
-  }
-    
-  #skills {
-    width:250px;
-  }
-  
-  span {
-    font-size:bold;
-  }
-    .fieldname{
-      display: flex;
-    }
-  
-    #slot1StartTime {
-      width: 100px;
-      margin-left: 50px;
-    }
-  
-    #slot1EndTime {
-      width: 100px;
-    }
-  
-    #slot2StartTime {
-      width: 100px;
-      margin-left: 50px;
-    }
-  
-    #slot2EndTime {
-      width: 100px;
-    }
-  
-    #slot3StartTime {
-      width: 100px;
-      margin-left: 50px;
-    }
-  
-    #slot3EndTime {
-      width: 100px;
-    }
-  
-    #slot4StartTime {
-      width: 100px;
-      margin-left: 50px;
-    }
-  
-    #slot4EndTime {
-      width: 100px;
-    }
+}
+
+#skills {
+    width: 250px;
+}
+
+span {
+    font-size: bold;
+}
+
+.fieldname {
+    display: flex;
+}
+
+#slot1StartTime {
+    width: 100px;
+    margin-left: 50px;
+}
+
+#slot2StartTime {
+    width: 100px;
+    margin-left: 50px;
+}
+
+#slot3StartTime {
+  width: 100px;
+  margin-left: 50px;
+}
+
+#slot4StartTime {
+  width: 100px;
+  margin-left: 50px;
+}
+
+#slot1EndTime {
+  width: 100px;
+}
+
+#slot2EndTime {
+    width: 100px;
+}
+
+#slot3EndTime {
+    width: 100px;
+}
+
+#slot4EndTime {
+    width: 100px;
+}
