--- a/src/app/interviewer/event-enrollment/event-enrollment.component.css
+++ b/src/app/interviewer/event-enrollment/event-enrollment.component.css
@@ -40,6 +40,14 @@
     background-color:green;
   }
   
+  th {
+    text-align: center;
+  }
+
+  td {
+    text-align: center;
+  }
+  
   input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
   } 
