--- a/src/app/interviewer/event-enrollment/event-enrollment.component.html
+++ b/src/app/interviewer/event-enrollment/event-enrollment.component.html
@@ -12,7 +12,6 @@
     <tr>
       <th>Slot No</th>
       <th>Slot Period</th>
-      <th></th>
       <th>Status</th>
     </tr>
   </thead>
@@ -22,49 +21,13 @@
       <td>{{ index.slotStartTime }} - {{ index.slotEndTime }}</td>
       <td>
         <label class="switch">
-          <input type="checkbox" (change)="enrollInterviewer($event,index.slotId)">
+          <input type="checkbox" id="enroll" name="enroll" (change)="enrollInterviewer($event,index.slotId)">
           <span class="slider round"></span>
         </label>
       </td>
     </tr>
   </tbody>
 </table>
-
-
-
-
-
-
-<!-- <div class="panel panel-warning">
-  <div class="panel-heading">{{newArray.name}}</div>
-  <div class="panel-body">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Slot No</th>
-          <th>No.of Interviewers</th>
-          <th></th>
-          <th>Total Interviews Taken</th>
-        </tr>
-      </thead>
-      <tbody *ngFor="let key of newArray.slots">
-        <tr>
-          <td>{{key.slotStartTime}} - {{key.slotEndTime}}</td>
-          <td><span class="label label-info">{{key.interviewers.length - 1}}</span></td>
-          <td>
-            <label class="switch">
-              <input type="checkbox" (change)="enrollInterviewer($event,key.slotId)">
-              <span class="slider round"></span>
-            </label>
-          </td>
-          <td>
-            <input type="number" class="form-control" id="ex1" type="text">
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div> -->
 <div class="text-center">
-  <button type="button" class="btn btn-warning" id="update">Update</button>
+  <button type="button" class="btn btn-warning" id="update" (click)="updateEventInterviewerList(pushArr)">Update</button>
 </div>
